# detat

./: Cargo.toml  GNUmakefile  README.md
pkg/archlinux/detat-git/: PKGBUILD
src/: main.rs
