[package]
name = "detat"
version = "0.1.2"
authors = ["taskie <t@skie.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardet = "0.2"
encoding = "0.2"
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
