[package]
name = "detat"
version = "0.1.2"
authors = ["taskie <t@skie.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardetng = "0.1.17"
encoding_rs = "0.8.30"
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
