[package]
name = "detat"
version = "0.2.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/taskie/detat"
description = "cat(1) with chardet."

[dependencies]
chardet = "0.2"
encoding = "0.2"
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
